--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@observablehq/plot": "^0.6.13",
+    "mathjs": "^12.3.2",
     "vue": "^3.4.15"
   },
   "devDependencies": {
