--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
-  "name": "webgl",
+  "name": "nuxt-app",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@observablehq/plot": "^0.6.13",
+    "@vueuse/core": "^10.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.330.0",
     "mathjs": "^12.3.2",
-    "vue": "^3.4.15"
+    "nuxt": "^3.10.2",
+    "radix-vue": "^1.4.5",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vue": "^3.4.19",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.3",
-    "autoprefixer": "^10.4.17",
-    "daisyui": "^4.7.1",
-    "postcss": "^8.4.35",
+    "@antfu/eslint-config": "^2.6.4",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "eslint": "^8.56.0",
+    "nuxt-module-eslint-config": "^0.1.0",
+    "shadcn-nuxt": "^0.9.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0",
-    "vue-tsc": "^1.8.27"
+    "typescript": "^5.3.3"
   }
 }
