--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.4",
     "@nuxtjs/google-fonts": "^3.1.3",
+    "@nuxtjs/seo": "2.0.0-rc.8",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@total-typescript/ts-reset": "^0.5.1",
     "eslint": "^8.56.0",
