--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -12,29 +12,30 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@observablehq/plot": "^0.6.13",
-    "@vueuse/core": "^10.7.2",
+    "@observablehq/plot": "^0.6.14",
+    "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.330.0",
-    "mathjs": "^12.3.2",
-    "nuxt": "^3.10.2",
-    "radix-vue": "^1.4.5",
-    "tailwind-merge": "^2.2.1",
+    "mathjs": "^12.4.1",
+    "nuxt": "^3.11.2",
+    "radix-vue": "^1.6.2",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.4.19",
-    "vue-router": "^4.2.5"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.4",
-    "@nuxtjs/google-fonts": "^3.1.3",
+    "@antfu/eslint-config": "^2.13.3",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/seo": "2.0.0-rc.8",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@total-typescript/ts-reset": "^0.5.1",
-    "eslint": "^8.56.0",
-    "nuxt-module-eslint-config": "^0.1.0",
+    "@types/bun": "^1.0.12",
+    "eslint": "^8.57.0",
+    "nuxt-module-eslint-config": "^0.1.1",
     "shadcn-nuxt": "^0.9.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
