--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.3.8",
     "@observablehq/plot": "^0.6.14",
     "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "d3": "^7.9.0",
     "lucide-vue-next": "^0.330.0",
     "mathjs": "^12.4.1",
     "nuxt": "^3.11.2",
+    "plotly.js": "^2.31.1",
+    "plotly.js-dist": "^2.31.1",
+    "plotly.js-dist-min": "^2.31.1",
     "radix-vue": "^1.6.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
@@ -32,8 +37,8 @@
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/bun": "^1.0.12",
-    "eslint": "^8.57.0",
-    "nuxt-module-eslint-config": "^0.1.1",
+    "@types/plotly.js": "^2.29.2",
+    "eslint": "^9.0.0",
     "shadcn-nuxt": "^0.9.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
