--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "lucide-vue-next": "^0.330.0",
     "mathjs": "^12.4.1",
     "nuxt": "^3.11.2",
-    "plotly.js": "^2.31.1",
-    "plotly.js-dist": "^2.31.1",
     "plotly.js-dist-min": "^2.31.1",
     "radix-vue": "^1.6.2",
     "tailwind-merge": "^2.2.2",
@@ -37,7 +35,7 @@
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/bun": "^1.0.12",
-    "@types/plotly.js": "^2.29.2",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "eslint": "^9.0.0",
     "shadcn-nuxt": "^0.9.0",
     "tailwindcss": "^3.4.3",
