--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "d3": "^7.9.0",
+    "html-to-image": "^1.11.11",
     "lucide-vue-next": "^0.330.0",
     "mathjs": "^12.4.1",
     "nuxt": "^3.11.2",
