--- a/package.json
+++ b/package.json
@@ -12,32 +12,33 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@nuxt/eslint": "^0.3.8",
+    "@nuxt/eslint": "^0.3.10",
+    "@nuxt/fonts": "^0.7.0",
     "@observablehq/plot": "^0.6.14",
     "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "html-to-image": "^1.11.11",
     "lucide-vue-next": "^0.330.0",
-    "mathjs": "^12.4.1",
+    "mathjs": "^12.4.2",
     "nuxt": "^3.11.2",
-    "plotly.js-dist-min": "^2.31.1",
-    "radix-vue": "^1.7.1",
+    "plotly.js-dist-min": "^2.32.0",
+    "posthog-js": "^1.130.2",
+    "radix-vue": "^1.7.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.4.23",
+    "vue": "^3.4.26",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.15.0",
-    "@nuxtjs/google-fonts": "^3.2.0",
+    "@antfu/eslint-config": "^2.16.1",
     "@nuxtjs/seo": "2.0.0-rc.8",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/bun": "^1.1.0",
+    "@types/bun": "^1.1.1",
     "@types/plotly.js-dist-min": "^2.3.4",
-    "eslint": "^9.1.0",
+    "eslint": "^9.2.0",
     "shadcn-nuxt": "^0.9.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
