--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "consola": "^3.2.3",
     "d3": "^7.9.0",
     "html-to-image": "^1.11.11",
     "lucide-vue-next": "^0.378.0",
@@ -31,11 +32,11 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.17.0",
+    "@antfu/eslint-config": "^2.18.0",
     "@nuxtjs/seo": "2.0.0-rc.10",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/bun": "^1.1.1",
+    "@types/bun": "^1.1.2",
     "@types/plotly.js-dist-min": "^2.3.4",
     "eslint": "^9.2.0",
     "shadcn-nuxt": "^0.10.4",
